[package]
name = "printb"
version = "0.1.0"
authors = ["Henry Wallace <henry@henrywallace.io>"]
edition = "2018"
description = "Render binary files as color images"
repository = "https://github.com/arclabs561/printb"
license = "MIT OR Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
image = "0.23.3"

[workspace]
